--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,24 @@
+* { margin: 0; padding: 0; }
+
 .page {
-    min-width: 1100px;
-    /* мы ещё не умеем делать мобильную версию сайта, */
-    /* поэтому выше установлена минимальная ширина страницы */
-    max-width: 1600px;
-    /* выше установили ограничение по максимальной ширине */
-    margin: 0 auto;
-    /* выше для экранов больше 1600px отцентрировали весь контент */
-    font-family: 'Helvetica Neue', Arial, sans-serif;
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: 0 auto;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .header {
-    height: 100vh;
-    min-height: 600px;
-    max-height: 756px;
-    /* выше установили ограничения для секции */
-    display: flex;
-    position: relative;
+  height: 100vh;
+  min-height: 600px;
+  max-height: 756px;
+  overflow: hidden;
+  display: flex;
+  position: relative;
     background-color: #F2F2F2;
 }
 
 .logo {
-  height: 100%;
-  width: 100%;
+  z-index: 3;
 }
 
 .logo_place_header {
@@ -30,7 +27,6 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 2;
 }
 
 .header__title {
@@ -40,6 +36,7 @@
   font-weight: bold;
   align-self: center;
   margin-left: 64px;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -50,11 +47,13 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .header__link {
   text-decoration: none;
   color: #2F80ED;
+  z-index: 2;
 }
 
 .header__main-illustration {
@@ -63,6 +62,7 @@
   position: absolute;
   bottom: 0;
   right: 0;
+  object-fit: cover;
   z-index: 1;
 }
 
@@ -142,7 +142,6 @@
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
-  margin: 0;
 }
 
 .section-subtitle {
@@ -151,7 +150,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-bottom: 0;
+  margin-top: 20px;
 }
 
 .table {
@@ -183,19 +182,198 @@
   font-weight: normal;
 }
 
+.feinman {
+  height: 790px;
+  padding: 100px 0 0 0;
+  background-color: #F2F2F2;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
 
-/* и элемента с модификатором вида ключ-значение */
+.feinman__title {
+  margin: 0;
+  width: 648px;
+  align-self: center;
+  z-index: 1;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+
+}
+
+.feinman__subtitle {
+  margin: 70px 0 0 0;
+  align-self: center;
+  z-index: 1;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feinman__link {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-decoration: none;
+  color: black;
+}
+
+.feinman__illustration {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  object-fit: cover;
+}
+
+.kaufman {
+  background-color: #1F1F1F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  width: 60%;
+  text-align: center;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  color: white;
+  margin: 90px 0 0 0;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  color: white;
+  margin: 20px 0 0 0;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  width: 1100px;
+  margin: 0 auto 90px auto;
+  z-index: 1;
+}
+
+.table__row_theme_dark {
+  margin: 80px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+
 .table__cell_theme_dark {
     width: 200px;
     color: white;
-    margin-right: 0;
-    margin-top: 80px;
 }
 
-/* Доделать лого для футера
-.logo_place_footer {
+.table__heading_theme_dark {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text_theme_dark {
+  margin: 20px 0 0 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  top: 0;
+}
+
+.footer {
+  background-color: #1F1F1F;
+  min-height: 350px;
+  display: flex;
+  justify-content: center;
+}
+
+.footer__columns {
+  color: white;
+  width: 90%;
+  margin: 60px auto 40px auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.logo_place_header {
   width: 183px;
   height: 35px;
-  z-index: 1;
 }
-*/
+
+.footer__author {
+ margin: 18px 0;
+}
+
+.footer__author-text {
+ margin: 0;
+ line-height: 25px;
+ font-size: 18px;
+ font-weight: normal;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  margin-top: 20px;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-link {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  color: white;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+
