--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-* { margin: 0; padding: 0; }
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -48,6 +46,7 @@
   font-size: 18px;
   font-weight: normal;
   z-index: 2;
+  margin: 0;
 }
 
 .header__link {
@@ -142,6 +141,7 @@
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
+  margin: 0;
 }
 
 .section-subtitle {
@@ -150,7 +150,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-top: 20px;
+  margin: 20px 0 0 0;
 }
 
 .table {
@@ -245,11 +245,6 @@
 }
 
 .section-title_theme_dark {
-  width: 60%;
-  text-align: center;
-  line-height: 69px;
-  font-size: 60px;
-  font-weight: bold;
   color: white;
   margin: 90px 0 0 0;
   z-index: 1;
@@ -260,7 +255,6 @@
   text-align: center;
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;
   color: white;
   margin: 20px 0 0 0;
   z-index: 1;
@@ -298,6 +292,10 @@
 }
 
 .kaufman__triangle {
+  background-image: url(../images/triangle.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   width: 877px;
   height: 877px;
   position: absolute;
@@ -334,20 +332,17 @@
 }
 
 .footer__author {
- margin: 18px 0;
-}
-
-.footer__author-text {
- margin: 0;
- line-height: 25px;
- font-size: 18px;
- font-weight: normal;
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin: 0;
 }
 
 .footer__column-links {
