--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,8 +1,8 @@
 .video__iframes {
-  margin: 0 auto;
+  margin: 50px auto -50px auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 20px;
   position: relative;
-  top: 50px;
+
 }
